# uautoresearchX

./:  CLI引擎桥接适配升STDIO Streaming JSON-RPC 通信层.md  README.md  pyproject.toml  run_tests.sh  task-breakdown-c877cf.md  test_cli_svrdd_opencode.sh  training_plan.md  多智能体自动化训练框架架构设计v1.0.md  多智能体训练框架-CLI模式设计与实施计划-v1.md  多智能体训练框架-架构审阅与修订计划-v1.1.md  测试计划-SVRDD_YOLO端到端跑通-v1.md
agents/: base_agent.py
agents/data_format_converters/: _llm_common.py  alpaca_converter.py  base_converter.py  coco_converter.py  mask_converter.py  sharegpt_converter.py  yolo_converter.py
configs/: agents.yaml  agents.yaml.bak  data_format_patterns.yaml  training_engines.yaml  training_pipeline_patterns.yaml  validate_agents.py
docs/: ARCHITECTURE.md
orchestrator/: cli.py  human_gate.py  run_pipeline.py  run_registry.py  state_machine.py  tui.py
scripts/: llamafactory_run.sh  transformers_run.sh  trl_run.sh  ultralytics_run.sh  verl_run.sh
tests/: test_base_agent.py  test_cli.py  test_data_format_converters.py  test_end_to_end_demo.py  test_engines_consistency.py  test_execution_agents.py  test_human_gate.py  test_json_extraction.py  test_jsonrpc_transport.py  test_knowledge_update.py  test_log_adapters.py  test_planning_agents.py  test_process_manager.py  test_run_registry.py  test_state_machine.py
tools/: prepare_svrdd_records.py  sample_svrdd_records.py  svrdd_dataset_records.json  svrdd_dataset_records_sample.json  svrdd_dataset_sample.txt  svrdd_dataset_sample_summary.txt
uautoresearchx.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
(+133 files in other folders)
