[project]
name = "uautoresearchx"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.28.1",
    "pydantic>=2.13.4",
    "pyyaml>=6.0.3",
    "pillow>=11.0.0",
    "typer>=0.26.8",
    "rich>=15.0.0",
]

[project.scripts]
uautoresearchx = "orchestrator.cli:app"

[tool.setuptools.packages.find]
include = ["agents*", "orchestrator*", "configs*"]

[dependency-groups]
dev = [
    "mypy>=2.2.0",
    "pytest>=9.1.1",
    "pytest-mock>=3.15.1",
    "types-pyyaml>=6.0.12.20260518",
]

[[tool.uv.index]]
name = "tsinghua"
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
default = true
